# ncx-infra-controller-core

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Makefile  Makefile-build.toml  Makefile-package.toml  Makefile.toml  devspace.yaml  docker-compose.yml  skaffold.yml
crates/admin-cli/: Cargo.toml  build.rs
crates/admin-cli/src/: async_write.rs  errors.rs  health_utils.rs  main.rs  metadata.rs  rpc.rs
crates/agent/: Cargo.toml  build.rs  example_agent_config.toml
crates/agent/src/: acl_rules.rs  agent_platform.rs  command_line.rs  dhcp.rs  dhcp_server_grpc_client.rs  ethernet_virtualization.rs  fmds_client.rs  frr.rs  hbn.rs  health.rs  host_machine_id.rs  instance_metadata_endpoint.rs  instrumentation.rs  interfaces.rs  lib.rs  lldp.rs  machine_inventory_updater.rs  main.rs  main_loop.rs  managed_files.rs  netlink.rs  network_monitor.rs  nvue.rs  periodic_config_fetcher.rs  traffic_intercept_bridging.rs  upgrade.rs  util.rs
crates/agent/templates/: apt-clean  default-nico-dhcp-server.conf  nvue_startup_etv.conf  update-ovs-pipe-size  update-ovs-pipe-size.service
crates/api/: Cargo.toml  build.rs  casbin-policy.csv
crates/api-db/: Cargo.toml  build.rs
crates/api-db/migrations/: 20211119192131_initial.sql  20230308160000_machine_network_status_observation.sql  20230424120000_fix_cleanup_machine_by_id.sql  20230622161718_nico_native_networking.sql  20240124205600_dns_records_enhanced.sql  20240530120000_instance_os_definitions.sql  20240702120000_machine_dpu_health_report.sql  20241007140300_replace_desired_firmware.sql  20241113103503_machine_validation_data.sql  20241114103503_machine_validation_data_markverified.sql  20241118103503_machine_validation_h100.sql  20241119104000_machine_validation_progress.sql  20241212300050_machine_validation_benchmark.sql  20250108104000_machine_validation_benchmark.sql  20250108104400_tenant_organization_name_non_null.sql  20250109104000_machine_validation_benchmark.sql  20250110104000_machine_validation_benchmark.sql  20250127104000_machine_validation_7d_lenovo.sql  20250204104000_machine_validation_lenovo_7d9ecto1ww.sql  20250204105000_machine_validation_fio_fix.sql  20250207104000_machine_validation_lenovo_sr_l40.sql  20250210105000_machine_validation_cpu_mem_benchpress_fix.sql  20250224104000_machine_validation_raytracing.sql  20250227104000_machine_validation_nico_nicorunbook.sql  20250228165500_nico_versions.sql  20250303042916_remove_circuit_id.sql  20250312104000_machine_validation_sku_0b73_modelname_poweredge_xe9680.sql  20250321104000_machine_validation_p54903_b21.sql  20250409103503_machine_validation_nvme.sql  20250507120000_machine_validation.sql  20250507220800_machine_validation_gb200.sql  20250523105000_machine_validation_dcgmi.sql  20250618103302_power_manager.sql  20250722183300_instance_interface_id_v2.sql  20251007070125_gate_poweron.sql  20251113063000_consolidated_rms.sql  20260321120000_operating_systems.sql  20260420043607_expected_machines_dpu_mode.sql  20260428130000_dpu_agent_health_report_override.sql  20260608120000_machine_skus_id_not_empty.sql  (+1 more)
crates/api-db/src/: bmc_metadata.rs  compute_allocation.rs  dhcp_entry.rs  dhcp_record.rs  dpa_interface.rs  dpu_remediation.rs  expected_machine.rs  expected_power_shelf.rs  expected_rack.rs  expected_switch.rs  extension_service.rs  host_machine_update.rs  ib_partition.rs  instance.rs  instance_address.rs  instance_network_config.rs  instance_type.rs  ip_allocator.rs  lib.rs  machine.rs  machine_boot_override.rs  machine_interface.rs  machine_interface_address.rs  machine_topology.rs  machine_validation.rs  machine_validation_result.rs  machine_validation_suites.rs  managed_host.rs  network_devices.rs  network_prefix.rs  network_security_group.rs  network_segment.rs  nico_version.rs  nvl_logical_partition.rs  nvl_partition.rs  operating_system.rs  power_options.rs  power_shelf.rs  predicted_machine_interface.rs  rack.rs  (+8 more)
crates/api-test-helper/: Cargo.toml
crates/api-test-helper/src/: api_server.rs  domain.rs  grpcurl.rs  instance.rs  lib.rs  machine.rs  machine_a_tron.rs  mock_rms.rs  subnet.rs  tenant.rs  utils.rs  vpc.rs  vpc_prefix.rs
crates/api/files/: bf.cfg
crates/api/src/: api.rs  auth.rs  compat.rs  db_init.rs  dpf.rs  dpf_services.rs  dynamic_settings.rs  errors.rs  ethernet_virtualization.rs  ipxe.rs  lib.rs  listener.rs  main.rs  redfish.rs  run.rs  scout_stream.rs  setup.rs  storage.rs
crates/api/templates/: base.html  health_reports_detail.html  index.html  machine_detail.html  redfish_actions.html  redfish_browser.html  ufm_browser.html
crates/bmc-explorer-cli/: Cargo.toml
crates/bmc-explorer-cli/src/: main.rs
crates/dpu-remediation/: Cargo.toml
crates/dpu-remediation/src/: remediation.rs
crates/firmware/: Cargo.toml
crates/http-connector/: Cargo.toml
crates/http-connector/src/: connector.rs  resolver.rs
crates/ib-fabric/: Cargo.toml
crates/ib-fabric/src/: config.rs  lib.rs  metrics.rs
crates/ipmi/: Cargo.toml
crates/ipmi/src/: bmc_mock.rs  lib.rs  test_support.rs  tool.rs
crates/log-parser/: Cargo.toml
crates/log-parser/src/: main.rs  nico_reporting.rs
crates/machine-controller/: Cargo.toml
crates/machine-controller/src/: context.rs  dpf.rs  handler.rs  io.rs  lib.rs  metrics.rs  redfish.rs  write_ops.rs
crates/mockdpa/: Cargo.toml
crates/mockdpa/src/: main.rs
crates/nvlink-manager/: Cargo.toml
crates/nvlink-manager/src/: config.rs  lib.rs  metrics.rs
crates/preingestion-manager/: Cargo.toml
crates/preingestion-manager/src/: bfb_rshim_copier.rs  config.rs  lib.rs  metrics.rs
crates/redfish/: Cargo.toml
crates/rvs/: Cargo.toml
crates/rvs/doc/: example_config.toml  example_scenario.toml
crates/rvs/src/: config.rs  error.rs  main.rs
crates/site-explorer/: Cargo.toml
crates/site-explorer/src/: bmc_endpoint_explorer.rs  boot_order_tracker.rs  config.rs  credentials.rs  lib.rs  machine_creator.rs  managed_host.rs  metrics.rs  redfish.rs  switch_creator.rs
crates/ssh-console-fuzz/: Cargo.toml
crates/ssh-console-mock-api-server/: Cargo.toml  build.rs
(+2353 files in other folders)
