#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-admin-cli"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to nico-admin-cli
name = "nico-admin-cli"
path = "src/main.rs"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../bmc-vendor" }
nico-macros = { path = "../macros" }
nico-network = { path = "../network" }
nico-ssh = { path = "../ssh" }
nico-tls = { path = "../tls" }
nico-uuid = { path = "../uuid" }
nico-version = { path = "../version" }
nico-secrets = { path = "../secrets" }
nico-health-report = { path = "../health-report" }
nico-measured-boot = { path = "../measured-boot", features = ["cli"] }
nico-libmlx = { path = "../libmlx" }
nico-libmlx-model = { path = "../libmlx-model" }
nico-rpc = { path = "../rpc", features = ["cli"] }
nico-rpc-utils = { path = "../rpc-utils" }
nico-utils = { path = "../utils" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
color-eyre = { workspace = true }
csv = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
ipnet = { workspace = true }
libredfish = { workspace = true }
librms = { workspace = true }
mac_address = { workspace = true }
prettytable-rs = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = [
    "env-filter",
    "local-time",
], workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
x509-parser = { features = ["validate"], workspace = true }
zip = { workspace = true, default-features = false, features = ["deflate"] }

[build-dependencies]
clap = { workspace = true }
nico-version = { path = "../version" }

[lints]
workspace = true
