#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-api-test-helper"
version = "0.0.0"
description = "Helpers to launch nico-api for integration testing"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "api_test_helper"

[dependencies]

# [local-dependencies]
async-trait = { workspace = true }
bmc-mock = { path = "../bmc-mock" }
nico-api = { path = "../api", default-features = false }
nico-version = { path = "../version" }
nico-rpc = { path = "../rpc" }
nico-machine-a-tron = { path = "../machine-a-tron" }
nico-tls = { path = "../tls" }
nico-secrets = { path = "../secrets" }
nico-utils = { path = "../utils" }
metrics-endpoint = { path = "../metrics-endpoint" }
nico-uuid = { path = "../uuid" }

chrono = { workspace = true }
eyre = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "mac_address",
  "ipnetwork",
  "uuid",
  "migrate",
  "postgres",
  "chrono",
  "macros",
  "json",
] }
tempfile = { workspace = true }
tokio.workspace = true
tonic = { workspace = true }
tokio-util.workspace = true
tracing = { workspace = true }
tracing-subscriber = { features = [
  "env-filter",
  "local-time",
], workspace = true }
futures = { workspace = true }
librms = { workspace = true }
itertools = { workspace = true }
ctor = { workspace = true }
temp-dir = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
nico-version = { path = "../version" }

[lints]
workspace = true
