#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-api"
version = "0.0.1"
edition.workspace = true
description = "NICo is a Bare Metal Provisioning system with auto-discovery and API based machine manipulation"
license.workspace = true
authors.workspace = true

[lib]
name = "nico"

[[bin]]
name = "nico-api"
path = "src/main.rs"

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
bmc-vendor = { path = "../bmc-vendor" }
bmc-explorer = { path = "../bmc-explorer" }
bms-dsx-exchange = { path = "../bms-dsx-exchange" }
config-version = { path = "../config-version", features = ["sqlx"] }
nico-host-support = { path = "../host-support", default-features = false }
nico-network = { path = "../network", features = ["sqlx"] }
nico-secrets = { path = "../secrets" }
nico-version = { path = "../version" }
nico-firmware = { path = "../firmware" }
nico-health-report = { path = "../health-report" }
nico-health-metrics = { path = "../health-metrics" }
nico-ib-fabric = { path = "../ib-fabric" }
nico-ipxe-renderer = { path = "../ipxe-renderer" }
nico-ipmi = { path = "../ipmi" }
nico-redfish = { path = "../redfish" }
nico-network-segment-controller = { path = "../network-segment-controller" }
nico-site-explorer = { path = "../site-explorer" }
nico-spdm-controller = { path = "../spdm-controller" }
nico-switch-controller = { path = "../switch-controller" }
nico-preingestion-manager = { path = "../preingestion-manager" }
nico-nvlink-manager = { path = "../nvlink-manager" }
dns-record = { path = "../dns-record" }
libnmxm = { path = "../libnmxm" }
libnmxc = { path = "../libnmxc" }
logfmt = { path = "../logfmt" }
mqttea = { path = "../mqttea" }
nico-rpc = { path = "../rpc", features = ["sqlx", "model"] }
nico-rpc-utils = { path = "../rpc-utils" }
nico-utils = { path = "../utils", features = ["sqlx"] }
nico-ssh = { path = "../ssh" }
nico-tls = { path = "../tls" }
nico-uuid = { path = "../uuid", features = ["sqlx"] }
nico-measured-boot = { path = "../measured-boot", features = ["sqlx"] }
nico-metrics-utils = { path = "../metrics-utils" }
nico-libmlx = { path = "../libmlx" }
nico-api-model = { path = "../api-model", default-features = false }
nico-api-db = { path = "../api-db", default-features = false }
nico-authn = { path = "../authn" }
spancounter = { path = "../spancounter" }
nras = { path = "../nras" }
nico-dpf = { path = "../dpf" }
component-manager = { path = "../component-manager" }
sqlx-query-tracing = { path = "../sqlx-query-tracing" }
state-controller = { path = "../state-controller" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.

#these are alphabetized
ansi-to-html = { workspace = true }
arc-swap = { workspace = true }
askama = { features = ["serde_json"], workspace = true }
askama_escape = { workspace = true }
asn1-rs = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http2"] }
axum-extra = { workspace = true, features = ["cookie", "cookie-private", "typed-header"] }
base64 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
casbin = { features = ["glob"], workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crypto-bigint = { workspace = true }
dashmap = { workspace = true }
data-encoding = { workspace = true }
duration-str = { workspace = true }
eyre = { workspace = true }
figment = { features = ["env", "toml"], workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-rustls = { workspace = true }
hyper-timeout = { workspace = true }
hyper-util = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
jsonwebtoken = { features = ["rust_crypto"], workspace = true }
k8s-openapi = { features = ["latest"], workspace = true }
kube = { default-features = false, features = [
    "runtime",
    "derive",
    "client",
    "rustls-tls",
], workspace = true }
lazy_static = { workspace = true }
libredfish = { workspace = true }
librms = { workspace = true }
mac_address = { workspace = true }
num_cpus = { workspace = true }
oauth2 = { default-features = false, workspace = true }
oid-registry = { workspace = true }
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry-prometheus.workspace = true
opentelemetry-semantic-conventions = { features = [
    "semconv_experimental",
], workspace = true }
opentelemetry_sdk = { workspace = true, features = [
    "logs",
    "rt-tokio",
    "spec_unstable_metrics_views",
    "testing",
] }
pkcs1 = { workspace = true }
p256 = { workspace = true }
prometheus = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { default-features = false, features = [
    "rustls",
    "stream",
], workspace = true }
rsa = { workspace = true }
rumqttc = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "mac_address",
    "ipnetwork",
    "uuid",
    "migrate",
    "postgres",
    "chrono",
    "macros",
    "json",
] }
strum = { workspace = true }
temp-dir = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tower = { workspace = true }
tower-http = { features = [
    "add-extension",
    "auth",
    "normalize-path",
], workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { features = [
    "env-filter",
    "local-time",
], workspace = true }
tss-esapi = { optional = true, workspace = true }
url = { features = ["serde"], workspace = true }
urlencoding = { workspace = true }
uuid = { features = ["v4", "serde"], workspace = true }
version-compare = { workspace = true }
x509-parser = { features = ["verify"], workspace = true }
#these are alphabetized

[features]
default = ["linux-build"]
linux-build = ["tss-esapi"]

[build-dependencies]
nico-version = { path = "../version" }

[dev-dependencies]
figment = { features = ["env", "test", "toml"], workspace = true }
ctor = { workspace = true }
lazy_static = { workspace = true }
const_format = { workspace = true }
mockall = { workspace = true }
rcgen = { workspace = true }
nico-macros = { path = "../macros" }
nico-sqlx-testing = { path = "../sqlx-testing", default-features = false }
nico-prost-builder = { path = "../prost-builder" }
nico-nvlink-manager = { path = "../nvlink-manager", features = ["test-support"] }
nico-redfish = { path = "../redfish", features = ["test-support"] }
nico-utils = { path = "../utils", features = ["test-support"] }
state-controller = { path = "../state-controller", features = ["test-support"] }
nico-ib-fabric = { path = "../ib-fabric", features = ["test-support"] }
prometheus-text-parser = { path = "../prometheus-text-parser" }
prost = { workspace = true }
tower-test = { workspace = true }
hyper = { features = ["client", "http1"], workspace = true }
http = { workspace = true }
mockito = { workspace = true }
once_cell = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
