#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-api"
version = "0.0.1"
edition.workspace = true
description = "NICo is a Bare Metal Provisioning system with auto-discovery and API based machine manipulation"
license.workspace = true
authors.workspace = true

[lib]
name = "nico"

[[bin]]
name = "nico-api"
path = "src/main.rs"

[dependencies]
# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
bmc-vendor = { path = "../bmc-vendor" }
nico-api-model = { path = "../api-model", default-features = false }
nico-api-db = { path = "../api-db", default-features = false }
nico-authn = { path = "../authn" }
nico-dpa-interface-controller = { path = "../dpa-interface-controller" }
nico-dpf = { path = "../dpf" }
nico-firmware = { path = "../firmware" }
nico-health-report = { path = "../health-report" }
nico-host-support = { path = "../host-support", default-features = false }
nico-ib-fabric = { path = "../ib-fabric" }
nico-ib-partition-controller = { path = "../ib-partition-controller" }
nico-ipmi = { path = "../ipmi" }
nico-ipxe-renderer = { path = "../ipxe-renderer" }
nico-libmlx = { path = "../libmlx" }
nico-machine-controller = { path = "../machine-controller" }
nico-measured-boot = { path = "../measured-boot", features = ["sqlx"] }
nico-metrics-utils = { path = "../metrics-utils" }
nico-mqtt-common = { path = "../mqtt-common" }
nico-network = { path = "../network", features = ["sqlx"] }
nico-network-segment-controller = { path = "../network-segment-controller" }
nico-nvlink-manager = { path = "../nvlink-manager" }
nico-power-shelf-controller = { path = "../power-shelf-controller" }
nico-preingestion-manager = { path = "../preingestion-manager" }
nico-rack = { path = "../rack" }
nico-rack-controller = { path = "../rack-controller" }
nico-redfish = { path = "../redfish" }
nico-rpc = { path = "../rpc", features = ["sqlx", "model"] }
nico-rpc-utils = { path = "../rpc-utils" }
nico-secrets = { path = "../secrets" }
nico-site-explorer = { path = "../site-explorer" }
nico-spdm-controller = { path = "../spdm-controller" }
nico-state-controller-common = { path = "../state-controller-common" }
nico-switch-controller = { path = "../switch-controller" }
nico-utils = { path = "../utils", features = ["sqlx"] }
nico-uuid = { path = "../uuid", features = ["sqlx"] }
nico-version = { path = "../version" }
component-manager = { path = "../component-manager" }
config-version = { path = "../config-version", features = ["sqlx"] }
dns-record = { path = "../dns-record" }
libnmxc = { path = "../libnmxc" }
logfmt = { path = "../logfmt" }
mqttea = { path = "../mqttea" }
nras = { path = "../nras" }
spancounter = { path = "../spancounter" }
state-controller = { path = "../state-controller" }
sqlx-query-tracing = { path = "../sqlx-query-tracing" }

# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
ansi-to-html = { workspace = true }
arc-swap = { workspace = true }
askama = { workspace = true, features = ["serde_json"] }
askama_escape = { workspace = true }
asn1-rs = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http2"] }
axum-extra = { workspace = true, features = ["cookie", "cookie-private", "typed-header"] }
base64 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
casbin = { workspace = true, features = ["glob"] }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
data-encoding = { workspace = true }
duration-str = { workspace = true }
eyre = { workspace = true }
figment = { workspace = true, features = ["env", "toml"] }
futures = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true }
ipnetwork = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
lazy_static = { workspace = true }
libredfish = { workspace = true }
librms = { workspace = true }
mac_address = { workspace = true }
num_cpus = { workspace = true }
oauth2 = { workspace = true, default-features = false }
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry-prometheus = { workspace = true }
opentelemetry-semantic-conventions = {  workspace = true, features = ["semconv_experimental"] }
opentelemetry_sdk = { workspace = true, features = [
    "logs",
    "rt-tokio",
    "spec_unstable_metrics_views",
    "testing",
] }
pkcs1 = { workspace = true }
p256 = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["rustls", "stream"]  }
rsa = { workspace = true }
rumqttc = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "mac_address",
    "ipnetwork",
    "uuid",
    "migrate",
    "postgres",
    "chrono",
    "macros",
    "json",
] }
strum = { workspace = true }
temp-dir = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["add-extension", "auth", "normalize-path"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
tss-esapi = { workspace = true, optional = true }
url = { workspace = true, features = ["serde"] }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
x509-parser = { workspace = true, features = ["verify"] }

[features]
default = ["linux-build"]
linux-build = ["tss-esapi"]

[build-dependencies]
nico-version = { path = "../version" }

[dev-dependencies]
# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
nico-ib-fabric = { path = "../ib-fabric", features = ["test-support"] }
nico-machine-controller = { path = "../machine-controller", features = ["test-support"] }
nico-macros = { path = "../macros" }
nico-nvlink-manager = { path = "../nvlink-manager", features = ["test-support"] }
nico-prost-builder = { path = "../prost-builder" }
nico-rack = { path = "../rack", features = ["test-support"] }
nico-redfish = { path = "../redfish", features = ["test-support"] }
nico-sqlx-testing = { path = "../sqlx-testing", default-features = false }
nico-utils = { path = "../utils", features = ["test-support"] }
prometheus-text-parser = { path = "../prometheus-text-parser" }
state-controller = { path = "../state-controller", features = ["test-support"] }

# External dependencies. PLEASE KEEP ALPHABETIZED ORDER.
const_format = { workspace = true }
ctor = { workspace = true }
figment = { workspace = true, features = ["env", "test", "toml"] }
mockito = { workspace = true }
prost = { workspace = true }
rcgen = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
