[package]
name = "bmc-explorer-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# [local-dependencies]
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM.
nico-site-explorer = { path = "../site-explorer" }
nico-secrets = { path = "../secrets" }
nico-ipmi = { path = "../ipmi" }
nico-redfish = { path = "../redfish" }
# DO NOT PUT DEPENDENCIES OTHER THAN LOCAL DEPS HERE, THEY SHOULD ALL HAVE 'path =' IN THEM

#these are alphabetized
arc-swap = { workspace = true }
clap = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
