#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-dpu-remediation"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# TODO: rename to nico_dpu_remediation in source
name = "nico_dpu_remediation"

[dependencies]
eyre = { workspace = true }
rand = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# [local-dependencies]
nico-dpu-agent-utils = { path = "../dpu-agent-utils" }
nico-tls = { path = "../tls" }
nico-uuid = { path = "../uuid" }
nico-rpc = { path = "../rpc" }
