[package]
name = "nico-firmware"
version = "0.0.1"
edition.workspace = true
description = "NICo Firmware"
license.workspace = true
authors.workspace = true

[lib]
name = "nico_firmware"

[features]
default = []

[dependencies]
bmc-vendor = { path = "../bmc-vendor" }
nico-api-model = { path = "../api-model", default-features = false }

# these are alphabetized
eyre = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
md5 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
nico-macros = { path = "../macros" }
nico-api-db = { path = "../api-db", default-features = false }
sqlx = { workspace = true }
nico-sqlx-testing = { path = "../sqlx-testing", default-features = false }

[lints]
workspace = true
