#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-http-connector"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

# TODO: rename to nico_http_connector in source
[lib]
name = "nico_http_connector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-resolver = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
socket2 = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hyper-util = { features = ["tokio"], workspace = true }

futures-util = { workspace = true }
tower-service = { workspace = true }
tokio-socks = { workspace = true }
tryhard = { workspace = true }

[dev-dependencies]
hyper = { workspace = true, features = ["client", "http1", "http2"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
