[package]
name = "nico-ib-fabric"
version = "0.0.1"
edition.workspace = true
description = "NICo IB fabric"
license.workspace = true
authors.workspace = true

[lib]
name = "nico_ib_fabric"

[features]
default = []
test-support = []

[dependencies]
nico-api-db = { path = "../api-db" }
nico-api-model = { path = "../api-model" }
nico-health-report = { path = "../health-report" }
nico-secrets = { path = "../secrets" }
nico-tls = { path = "../tls" }
nico-utils = { path = "../utils" }
nico-uuid = { path = "../uuid" }

# these are alphabetized
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
duration-str = { workspace = true }
eyre = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
hyper-timeout = { workspace = true }
hyper-util = { workspace = true }
opentelemetry = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
figment = { features = ["env", "test", "toml"], workspace = true }

[lints]
workspace = true
