[package]
name = "nico-ipmi"
version = "0.0.1"
edition.workspace = true
description = "NICo IPMI"
license.workspace = true
authors.workspace = true

[lib]
name = "nico_ipmi"

[dependencies]
nico-secrets = { path = "../secrets", default-features = false }
nico-utils = { path = "../utils", default-features = false }
nico-uuid = { path = "../uuid" }

#these are alphabetized
arc-swap = { workspace = true }
async-trait = { workspace = true }
eyre = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

