#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "nico-log-parser"
version = "0.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
# TODO: rename to nico-log-parser
name = "nico-log-parser"
path = "src/main.rs"

[dependencies]
regex = { workspace = true }
serde = { features = ["derive"], workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
getopts = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

# [local-dependencies]
nico-health-report = { path = "../health-report" }
nico-rpc = { path = "../rpc" }
nico-uuid = { path = "../uuid" }
nico-tls = { path = "../tls" }

[build-dependencies]

[lints]
workspace = true
